# VINS-Fisheye

camera_models/: CMakeLists.txt
camera_models/src/code_utils/math_utils/: Polynomial.cpp
config/: vins_rviz_config.rviz
config/euroc/: euroc_stereo_imu_config_vins_fisheye.yaml
config/px4_sitl_d455/: px4_sitl_d455.yaml
config/realsense_d455/: realsense_stereo_imu_config.yaml
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: debug_test.launch  euroc.launch  pinhole.launch  px4_sitl.launch  realsense_d455.launch
vins_estimator/src/: fisheyeNode.cpp  fisheyeNode.hpp  rosNodeFisheye.cpp  rosNodeTest.cpp  rosNodelet.cpp  vins_base.cpp  vins_base.hpp  vins_node.cpp  vins_test.cpp
vins_estimator/src/depth_generation/: depth_estimator.cpp
vins_estimator/src/estimator/: depth_estimator.hpp  estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: projectionOneFrameTwoCamFactor.cpp
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker_base.cpp  feature_tracker_base.h  feature_tracker_cpu.cpp  feature_tracker_cpu.hpp  feature_tracker_cuda.hpp  feature_tracker_cuda_async.cpp  feature_tracker_cuda_async.hpp  feature_tracker_fisheye.hpp  feature_tracker_pinhole.cpp  feature_tracker_pinhole.hpp  feature_tracker_vpi.cpp  feature_tracker_vpi.hpp  ovx_replaceheader.hpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp
vins_estimator/src/utility/: backward.hpp  opencv_cuda.h  queue_wrapper.hpp  ros_utility.cpp  ros_utility.h  tic_toc.h  utility.h  visualization.cpp  visualization.h
